gen/youtube/v3/cargo-errors.log
    Checking google-youtube3 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/youtube/v3/lib)
error[E0609]: no field `request` on type `resources::thumbnails::SetRequestBuilder<'a, A>`
     --> youtube/v3/lib/src/lib.rs:29507:63
      |
29507 |                 let request_json = ::serde_json::to_vec(&self.request)?;
      |                                                               ^^^^^^^ help: a field with a similar name exists: `reqwest`

error[E0308]: mismatched types
     --> youtube/v3/lib/src/lib.rs:31511:20
      |
31511 |                 Ok(req.send()?.error_for_status()?)
      |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected (), found struct `reqwest::response::Response`
      |
      = note: expected type `()`
                 found type `reqwest::response::Response`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0308, E0609.
For more information about an error, try `rustc --explain E0308`.
error: Could not compile `google-youtube3`.

To learn more, run the command again with --verbose.
